specs/001-typescript-to-zig-native/examples/valid/division.ts
let value = 17 / 5;
let remainder = 17 % 5;

console.log(value);
console.log(remainder);
