specs/001-typescript-to-zig-native/examples/invalid/eval.ts
// expect-error E_UNSUPPORTED_EVAL
eval("console.log(1)");
